--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Lection14</string>
-    <string name="send_notification_1">Send notification</string>
-    <string name="send_notification_2">Send notification</string>
-    <string name="send_notification_3">Send notification</string>
-    <string name="send_notification_4">Send notification</string>
+    <string name="send_notification_1">Send simple notification</string>
+    <string name="send_notification_2">Send group notification</string>
+    <string name="send_notification_3">Send notification with action</string>
+    <string name="send_notification_4">Send progress notification</string>
 </resources>
